fix: buttons in header on mobile

--- a/assets/styles/layouts/Header.scss
+++ b/assets/styles/layouts/Header.scss
@@ -67,6 +67,12 @@ body {
 		justify-content: flex-end;
 		align-items: center;
 
+		.Header__navigation__buttons {
+			.Button + .Button {
+				margin-top: 0;
+			}
+		}
+
 		@media (max-width: ($breakpoint-tablet-landscape - 1)) {
 
 			.Header__mobile__hamburger {
@@ -378,7 +384,7 @@ body {
 
 						span {
 							padding: 0 1.25em;
-							font-size: 1rem;
+							font-size: 1rem !important;
 							line-height: 3.75;
 							margin: 0;
 
